--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?zmyhi#1" target="_blank">首页</a> | <a href="https://doyvntponycdh.cloudfront.net/1?fekcqcycc" target="_blank">动态网</a> | <a href="https://d1ntfewljph5k2.cloudfront.net/2?qybifej" target="_blank">大纪元</a> | <a href="https://d282b678eon3c.cloudfront.net/4?rpuemlw" target="_blank">看中国</a> | <a href="https://d1nm4aa0eu3bxh.cloudfront.net/pHh5q?dkokeo" target="_blank">新生网</a> | <a href="https://d124e4v75n9sum.cloudfront.net/tktpt?pitnxdj" target="_blank">阿波罗网</a> | <a href="https://dme0bxbvomkno.cloudfront.net/Mjpvu?qtuqxylu" target="_blank">干净世界</a> | <a href="https://d3sh8rhxyvin24.cloudfront.net/10?iegghhj" target="_blank">退党服务</a> | <a href="https://d3v04vdnqz6gui.cloudfront.net/Rffqf?dnmapq" target="_blank">明慧广播</a> | <a href="https://doqmgyop4u892.cloudfront.net/nw9Vn?umvwllll" target="_blank">传奇时代</a> | <a href="https://di88ceki78g29.cloudfront.net/AF9AG?ymbgfmfmp" target="_blank">新境界影视</a> | <a href="https://d1qenr1x5ix28c.cloudfront.net/zqMQA?nhufve" target="_blank">文昭谈论</a> | <a href="https://d1f01xri6nyv0g.cloudfront.net/7?lffez" target="_blank">明慧</a></p><p><a href="https://d1ed4zj8eeit74.cloudfront.net/9?sckqamhvt" target="_blank">大法</a> | <a href="https://d22qnxkzs9qeoh.cloudfront.net/3?amgpxs" target="_blank">新唐人</a> | <a href="https://d1f01xri6nyv0g.cloudfront.net/obAhT?mkxagsz" target="_blank">人民报</a> | <a href="https://dcz6rimunj42y.cloudfront.net/xXNHu?vaedw" target="_blank">放光明</a> | <a href="https://d13zv7yhtbxwll.cloudfront.net/5?pephdl" target="_blank">新纪元</a> | <a href="https://ddtx9y1vir8bp.cloudfront.net/6?hhuandua" target="_blank">希望之声</a> | <a href="https://d2p9r31ubb8t81.cloudfront.net/11?blfeh" target="_blank">无界网络</a> | <a href="https://d2wjsqtecmbuag.cloudfront.net/Pueji?yrursfvxc" target="_blank">追查国际</a> | <a href="https://d124e4v75n9sum.cloudfront.net/16?qulzid" target="_blank">明慧之窗</a> | <a href="https://do0q2uqs2ncwe.cloudfront.net/LdvzZ?kscgjfvt" target="_blank">细语人生</a> | <a href="https://dvucua6a0b85v.cloudfront.net/fBn3r?xfdheuyl" target="_blank">新世纪影视</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/PUWMb?xxgrwon" target="_blank">江峰时刻</a> | <a href="https://dsgpxulwvf05x.cloudfront.net/8?ajsqamzf" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?fugmnnbq#1" target="_blank">首页</a> | <a href="https://d1b0mjr6ppvor4.cloudfront.net/1?kqbjbtddu" target="_blank">动态网</a> | <a href="https://dhw62qyyxrv4n.cloudfront.net/2?sfavmtykd" target="_blank">大纪元</a> | <a href="https://d7b58bkqqk9ju.cloudfront.net/4?yhissalbz" target="_blank">看中国</a> | <a href="https://dd92z3w2j4w9k.cloudfront.net/pHh5q?kbaokykm" target="_blank">新生网</a> | <a href="https://d1t2us6hq0fx1u.cloudfront.net/tktpt?pvscj" target="_blank">阿波罗网</a> | <a href="https://d2a8dyhoj0w562.cloudfront.net/Mjpvu?bltrhi" target="_blank">干净世界</a> | <a href="https://dfxrfb9070id6.cloudfront.net/10?gwswnkmkm" target="_blank">退党服务</a> | <a href="https://d34v2ua3ud12rg.cloudfront.net/Rffqf?morquoiy" target="_blank">明慧广播</a> | <a href="https://d2rhftayg1puwj.cloudfront.net/nw9Vn?sqvsfne" target="_blank">传奇时代</a> | <a href="https://d26llhbq1ka51o.cloudfront.net/AF9AG?oatzp" target="_blank">新境界影视</a> | <a href="https://d3asbsenpgs1fq.cloudfront.net/zqMQA?midxnfzxw" target="_blank">文昭谈论</a> | <a href="https://d2rhftayg1puwj.cloudfront.net/7?akzftf" target="_blank">明慧</a></p><p><a href="https://dfxrfb9070id6.cloudfront.net/9?qnmtpaiw" target="_blank">大法</a> | <a href="https://d3asbsenpgs1fq.cloudfront.net/3?zoddmqgen" target="_blank">新唐人</a> | <a href="https://d2aqxvnyguf0uq.cloudfront.net/obAhT?wpjyad" target="_blank">人民报</a> | <a href="https://d1ff3ajoaf61nd.cloudfront.net/xXNHu?sqjzn" target="_blank">放光明</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/5?toqkcjxzq" target="_blank">新纪元</a> | <a href="https://d2p9r31ubb8t81.cloudfront.net/6?dsqofywrg" target="_blank">希望之声</a> | <a href="https://d78f5frq5siq8.cloudfront.net/11?xovlki" target="_blank">无界网络</a> | <a href="https://d17bhfsmf5ovpz.cloudfront.net/Pueji?qrmwjz" target="_blank">追查国际</a> | <a href="https://d1bfxyb2xiiyyy.cloudfront.net/16?eivec" target="_blank">明慧之窗</a> | <a href="https://d3sh8rhxyvin24.cloudfront.net/LdvzZ?ukztcro" target="_blank">细语人生</a> | <a href="https://d2rhftayg1puwj.cloudfront.net/fBn3r?jtzoo" target="_blank">新世纪影视</a> | <a href="https://d1tuw6k1rjq3u6.cloudfront.net/PUWMb?molpqyliz" target="_blank">江峰时刻</a> | <a href="https://d21y52w6f35pla.cloudfront.net/8?yodkqpjtc" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274648.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/04/id14216070-673439-320x200.jpg"><p align="center">日本制裁11个援俄实体 含7个中港企业</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274648.md#1" title="日本制裁11个援俄实体 含7个中港企业""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/04/id14216070-673439-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274315.md#1" title="时隔5年美B-2轰炸机抵关岛 在中共后院演习""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14274341-8477803-320x200.jpg">&nbsp;</a>
@@ -13,19 +13,19 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273504.md#1" title="军头赴延安开会 专家：凸显中共存亡时刻""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/03/id14197391-GettyImages-2051578461-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274128.md#1" title="追查国际更新中共活摘器官群体灭绝罪证据""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/11/id13343494-b312b7de456fbb1f90aad7e21d91ee11-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274494.md#1">座谈中俄朝轴心等议题 台湾学者有何看法</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274521.md#1">山西两层建筑因爆炸坍塌致多伤 现场成废墟</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274660.md#1">外传“一家7口套现20亿” 鸿博股份回应</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274645.md#1">奢侈品市场两极化 Gucci欲重塑品牌挽颓势</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274648.md#1">日本制裁11个援俄实体 含7个中港企业</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274597.md#1">理财平台“众牧宝”爆雷 北京办公区已贴封条</a><br>
+:clock8: <em>42分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274704.md#1">消息：菲律宾秘密加固仁爱礁搁浅旧军舰</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274494.md#1">座谈中俄朝轴心等议题 台湾学者有何看法</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274521.md#1">山西两层建筑因爆炸坍塌致多伤 现场成废墟</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274660.md#1">外传“一家7口套现20亿” 鸿博股份回应</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274645.md#1">奢侈品市场两极化 Gucci欲重塑品牌挽颓势</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274648.md#1">日本制裁11个援俄实体 含7个中港企业</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273536.md#1">人民币兑俄卢布跌至1年多来最低 释何信号</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273634.md#1">复旦大学学位授予仪式上 学生打老师泄不满</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273177.md#1">公安介入追税 中共设“警税作战中心”惹议</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273136.md#1">巴西发展稀土或打破中共垄断 专家析意义</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273985.md#1">中国游泳参赛名单出炉 孙杨巴黎奥运梦破灭</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273136.md#1">巴西发展稀土或打破中共垄断 专家析意义</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274135.md#1">人民币兑美元汇率跌至去年11月以来新低</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272914.md#1">小米SU7上市两个月 车主开始卖车</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/5/8/n14243928.md#1">人类存亡危机与创世主的恩典</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/5/6/n14241958.md#1">【特稿】人类起源问题的终极答案</a><br>
@@ -95,13 +95,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/16/n14271207.md#1">俄停美元欧元交易 民众抢购美元抛售卢布</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/16/n14271404.md#1">中国球迷传孙兴愍轮椅合成照 激怒韩国民众</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/15/n14270976.md#1">吉林舒兰市一天30多位法轮功学员遭绑架</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://dor7a43sj3338.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://dor7a43sj3338.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://dor7a43sj3338.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 40,777</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d2rl1c656u8mxm.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d2rl1c656u8mxm.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 40,777</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 432,091,109 人
+!共 432,091,633 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274625.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14274628-image-2-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274625.md#1">出狱一个月 张展被警告“再碰红线就进去”</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274129.md#1">飞天艺术学院公告：澄清</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273934.md#1">临近三中全会 上海访民遭严控 多人失联</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273758.md#1">国际调查：中国人权状况恶劣 香港持续恶化</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273115.md#1">“拆墙运动”刘栋玲面临被遣返回中国危险</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273164.md#1">黄雪琴王建兵遭中共判刑 洛杉矶华人集会抗议</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274481.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2014/05/1110142229442431-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274481.md#1">大陆多地二手房价跌至低于三年前</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274402.md#1">茅台酒风光不在？1瓶三个月跌去400元</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274411.md#1">梁静茹演唱会柱子票案宣判 主办方阶梯式退款</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274367.md#1">中国经济持续放缓 5月瑞士手表出口下降</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273791.md#1">纳斯达克加强审查中港企业IPO 防暴涨暴跌</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273691.md#1">比亚迪称被“恶意诋毁” 砸重金悬赏查证</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274494.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14274643-240619233109100311-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274494.md#1">座谈中俄朝轴心等议题 台湾学者有何看法</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274489.md#1">曾庆红旧部姜志刚受审 落马前曾“消失”两年</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274397.md#1">广西柳州两任市委书记同日被处理</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274316.md#1">美学者：夏天唤起人们对中共镇压的黑暗记忆</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274051.md#1">云南保山市长陈锐去世 上月底其父投案后被查</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273568.md#1">中共住建部前部长陈政高病亡 曾迫害法轮功</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274521.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14274694-38cf05f90ee2a96edf7d71f203cd786e-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274521.md#1">山西两层建筑因爆炸坍塌致多伤 现场成废墟</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274501.md#1">中国南方暴雨酿灾情 台陆委会表达慰问关怀</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274390.md#1">广东梅州遭遇罕见暴雨洪灾 至少9人死6失联</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274048.md#1">青岛卓越世纪中心一女子跳楼 街道办通报引质疑</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273247.md#1">广西洪水43.1万人受灾 桂林居民划船出行</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272902.md#1">科大讯飞38岁工程师猝死 引关注</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273823.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14273949-498591f6547e20ee776acb2454e5814f-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273823.md#1">开使馆车挡道惹议 亚太空合秘书长余琦拍片认错</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273834.md#1">大陆文章鼓励农民投资A股引网络炸锅 被下架</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273821.md#1">成都住持与女主播开房遭勒索 案件现新进展</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273711.md#1">三退声明精选（2024/06/19）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273174.md#1">大陆连锁舞蹈机构跑路 受害者损失上万</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273023.md#1">内蒙古一村5人遇害 山西刑案前村支书被通缉</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268173.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14268174-11_id13734986-000_9UB6PT-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268173.md#1">中国学术界频造假 学者：像病毒在污染世界</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266062.md#1">高考首日 新课标作文题被吐槽 海南未发条形码</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265798.md#1">中国高考首用AI监控 被疑技术不完善恐有误判</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/6/n14265024.md#1">揭秘：中共利用加国大学培养军事科学家</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263339.md#1">《64三十五年祭》作曲者：不曾褪色的使命</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14259194.md#1">造假风气蔓延至香港 陆生以假文凭入读港大</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/4/2/n14216942.md#1">【独家】和两任总理闹矛盾 习经济会突离场</a><br>
